# GM-HSE-AI-masters-course

./: LICENSE  README.md  make_env.sh  requirements.txt
Hometasks/Base/: GenDL_HT1_base.ipynb  readme.md
Hometasks/Pro/: readme.md
base/: readme.md
base /Lecture3_GAN_Diffusion/: 02_Diffusions.ipynb
base/Lecture1_NormFlows/: Huggingface_Inference.ipynb  huggingface_finetuning.ipynb  readme.md
base/Lecture2_VAE/: readme.md
base/Lecture3_GAN_Diffusion/: 02_Diffusions (1).ipynb  readme.md
base/Lecture4_MetricLearning/: readme.md
base/Lecture5_Autoregressive/: readme.md
homeworks/base/: GenDL_HT1_base.ipynb  pyproject.toml  result_array.json  urls_normalized.tsv  yandex_vm_manager.sh
homeworks/base/hw2/: 01_Generative_Adversarial_Networks_(GANS).ipynb  HW2.ipynb  sem02_autoencoders_solution.ipynb
homeworks/base/hw3/: HW3.ipynb
homeworks/pro/: hw1.ipynb
homeworks/pro/hw1/: hw1.ipynb
homeworks/pro/hw2/: hw2.ipynb  hw2_glow.ipynb
homeworks/pro/hw3/: hw3.ipynb
seminars/pro/: sem1_pixelcnn.ipynb  sem2_flow.ipynb  sem4_vae.ipynb  sem6_gan.ipynb
