[project]
name = "base"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "google>=3.0.0",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "openai>=2.3.0",
    "pandas>=2.3.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torcheval>=0.0.7",
    "transformers>=4.57.0",
]
